<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.database.PostDetailActivity">

	<include
		android:id="@+id/post_author_layout"
		layout="@layout/include_post_author"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"/>



	<LinearLayout
		android:id="@+id/comment_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/post_author_layout"
		android:layout_marginTop="@dimen/activity_vertical_margin"

		android:weightSum="1.0">

		<EditText
			android:id="@+id/field_comment_text"
			android:layout_height="wrap_content"
			android:hint="@string/hint_body"
			android:maxLines="1"
			android:layout_width="123dp" />

		<Button
			android:id="@+id/button_post_comment"
			style="@style/Base.Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.2"
			android:text="@string/post"/>
		<Button
			android:id="@+id/button_post_fcm"
			style="@style/Base.Widget.AppCompat.Button.Borderless"
			android:layout_width="103dp"
			android:layout_height="match_parent"
			android:textSize="20sp"
			android:textStyle="normal|bold"
			android:onClick="sendTokens"
			android:background="@drawable/ic_alarm1" />
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="showToken"
			android:background="@drawable/ic_image_edit" />
		<TextView
			android:id="@+id/txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/result"
			android:textSize="0.1sp" />

	</LinearLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/recycler_comments"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/comment_form"
		tools:listitem="@layout/item_comment"/>

</RelativeLayout>